--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -4,8 +4,8 @@ jobs:
   my-job:
     runs-on: ubuntu-lastest
     steps:
-      - name: first-step
-        run: echo "Hello World"
+      - name: checkout code
+        uses:  actions/checkout@v4
       - name: Read-File
         run: cat hello.txt
 
